<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/how_many_times_has_hunter_listen_to_way_it_goes_quot"
            android:layout_width="241dp"
            android:layout_height="34dp"
            android:id="@+id/title" android:layout_marginTop="76dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            app:layout_constraintHorizontal_bias="0.492" android:gravity="center_horizontal"/>
    <Button
            android:text="@string/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:onClick="increaseCount" tools:text="Add 1"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/button4"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/count" android:layout_marginBottom="268dp"
            app:layout_constraintBottom_toTopOf="@+id/button" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/title" android:textSize="64sp" android:textStyle="bold"
            android:gravity="bottom|top"
            app:layout_constraintVertical_bias="0.0" app:layout_constraintHorizontal_bias="0.502"/>
    <Button
            android:text="@string/remove_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/remove"
            android:onClick="decreaseCount"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button4" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.5"/>
    <Button
            android:text="@string/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button4"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:onClick="resetCount"/>
    <Button
            android:text="@string/learn_more_about_the_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/info"
            android:onClick="learnMore"/>
</android.support.constraint.ConstraintLayout>